<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tirardado"
        android:title="@string/tirar_dado"
        android:icon="@drawable/ic_casino_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/reiniciarpartida"
        android:title="@string/reiniciar_partida"
        android:icon="@drawable/ic_loop_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/partidasguardadas"
        android:title="@string/title_activity_historial"
        android:icon="@drawable/ic_folder_white_24dp"
        app:showAsAction="ifRoom"/>
        
    <item
        android:id="@+id/addjugador"
        android:title="@string/nuevo_jugador"
        android:icon="@drawable/ic_person_add_white_24dp"
        app:showAsAction="ifRoom"/>
        
    <item
        android:id="@+id/ordenarpartida"
        android:title="@string/ordenar_partida"
        app:showAsAction="never"/> 
        
    <item
        android:id="@+id/jugadorinicial"
        android:title="@string/jugador_inicial"
        app:showAsAction="never"/>  
        
    <item
        android:id="@+id/mododuelo"
        android:title="@string/vista_duelo"
        app:showAsAction="never"/>
        
    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/action_settings"
        android:orderInCategory="100" 
        app:showAsAction="never" />


</menu>
